# ai-cloud-team

./: README.md  pyproject.toml
src/ai_cloud_team/: crew.py  main.py
src/ai_cloud_team/config/: agents.yaml  tasks.yaml
