[project]
name = "ai_cloud_team"
version = "0.1.0"
description = "ai-cloud-team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
ai_cloud_team = "ai_cloud_team.main:run"
run_crew = "ai_cloud_team.main:run"
train = "ai_cloud_team.main:train"
replay = "ai_cloud_team.main:replay"
test = "ai_cloud_team.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
